# zeta

./: .gitignore  README.md  pyproject.toml  sft.ipynb
run/: bridge.py  model.py
script/: check_format.py  extract_seeds.py  gen_dataset.py  gen_examples.py  prompt-template.md
